[package]
name = "smooth-operator"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
smooth-operator-impl = { path = "../smooth-operator-impl" }
